# Poll-bot-prototype

./: *backup.py  Excess_polls.py  README.md  config.json  keep_alive.py  main.py  pyproject.toml  t1.txt  t2.txt  t3.txt  things.py  transfer.py
cogs/: multi.py  poll.py
